# HW2_C

HW2/: Airline.c  Airline.h  Airport.c  Airport.h  AirportManager.c  AirportManager.h  CMakeLists.txt  Date.c  Date.h  Flight.c  Flight.h  Functions.c  Functions.h  Plane.c  Plane.h  generalStrings.h  main.c
Home exercise 2 10010 Part A (1)/: Airport.c  Airport.h  Date.c  Date.h  Functions.c  Functions.h  Plane.c  Plane.h  generalStrings.c  generalStrings.h  main.c
